# dirigo-teledyne

./: README.md  pyproject.toml
dirigo_teledyne/: __init__.py  dirigo_teledyne.py
tests/: try_digitizer.py
