[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_teledyne"
version = "0.0.1"
description = "Plugin to use Teledyne ADQ digitizers with Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"},
    {name = "H. Cao", email = "honghao@mit.edu"}
]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "dirigo"
]

[project.entry-points."dirigo_digitizers"]
teledyne = "dirigo_teledyne:TeledyneDigitizer"

# New format:
# [project.entry-points."dirigo.devices.digitizers"]
# teledyne = "dirigo_teledyne:TeledyneDigitizer"